# GoWin_FPGA_Prj

./: .gitignore
Riscv_Test/: Riscv_Test.gprj
Riscv_Test/firmware/: CMakeLists.txt  def.ld
Riscv_Test/firmware/src/: main.c  startup_riscv32i.s
Riscv_Test/firmware/tools/: gen_gowin_mi.py
Riscv_Test/src/: Riscv_Test.v  picosoc_regs.v  top.v
Riscv_Test/src/gowin_dpb/: gowin_dpb.ipc  gowin_dpb.mod  picoregs_ram.mod  picoregs_ram.v  picoregs_ram_tmp.v
Riscv_Test/src/gowin_sp/: internal_ram.ipc  internal_ram.mod  internal_ram.v  internal_ram_tmp.v
picorv32_test/: picorv32_test.gprj
picorv32_test/src/: picorv32.v  picorv32_test.cst  picorv32_test.v  picosoc_mem.v  qspi_flash_tester.v  qspi_serializer.v
picorv32_test/src/gowin_dpb/: picoregs_ram.ipc  picoregs_ram.mod  picoregs_ram.v  picoregs_ram_tmp.v
picorv32_test/src/gowin_sp/: internal_ram.ipc  internal_ram.mod  internal_ram.v  internal_ram_tmp.v
picorv32_test/tb/: a.out  dump.vcd  gtk.gtkw  simulate.bat  tb.v
